@@ -30,6 +30,8 @@ User visible changes
 
 * ANSI CL compliance: FUNCTION-KEYWORDS returns 2 values.
 
+* ANSI CL compliance: COMPILED-FUNCTION is a subtype of FUNCTION.
+
 * RUN-SHELL-COMMAND and RUN-PROGRAM now accept a :WAIT argument.
 
 * The compiler now checks the signature of function calls
